<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">晨星生命之音</string>
    <string name="text_defaultmusic">我们因爱而相聚</string>
    <string name="text_defaulttime">00:00</string>
    <string name="text_prevday">上一日</string>
    <string name="text_nextday">下一日</string>
    <string name="text_defaultday">XXXX-XX-XX</string>
    <string name="action_settings">设置</string>
    
</resources>
